# conan-transitive-test

./: README.md  build.sh  configure.sh  consume.sh  create.sh  profile.txt
consumer/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
creator/: conanfile.py
creator/src/: CMakeLists.txt  dummy.cc
